--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/jwt": "^7.2.0",
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.5.1",
+    "@nestjs/swagger": "^4.8.0",
     "@nestjs/typeorm": "^7.1.5",
     "ansi-styles": "^4.3.0",
     "bcryptjs": "^2.4.3",
@@ -43,12 +44,14 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3",
+    "swagger-ui-express": "^4.1.6",
     "ts-mapper": "^1.2.4",
     "typeorm": "^0.2.31"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.1",
     "@nestjs/schematics": "^7.1.3",
+    "@nestjs/swagger": "^4.7.16",
     "@nestjs/testing": "^7.5.1",
     "@types/bcryptjs": "^2.4.2",
     "@types/dotenv": "^8.2.0",
