--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/swagger": "^4.8.0",
     "@nestjs/typeorm": "^7.1.5",
+    "@types/formidable": "^1.2.1",
     "ansi-styles": "^4.3.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "formidable": "^1.2.2",
     "g": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.18",
